tests/ui/function-pointer/the-pointerrrr-84366-closure.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/the-pointerrrr-84366-closure.rs:31:5
   |
LL | fn make_static_displayable_closure<'temp>(not_static: &'temp str) -> Box<dyn fmt::Display> {
   |                                    -----  ---------- `not_static` is a reference that is only valid in the function body
   |                                    |
   |                                    lifetime `'temp` defined here
...
LL |     static_transfers_to_associated(&closure, not_static)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `not_static` escapes the function body here
   |     argument requires that `'temp` must outlive `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
